# facial_recognition

./: .gitignore  Makefile  README.md  classifier.py  classifier_comparison.py  db_management.py  db_path.py  draw.py  face_detection.py  face_normalizer.py  main.py  pyproject.toml
