[tool.poetry]
name = "facial_recognition"
version = "0.1.0"
description = ""
authors = ["GuillaumeDugat <dugatguillaume@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.5"
numpy = "^1.22.3"
scikit-image = "^0.19.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
